cmake_minimum_required(VERSION 2.6)
project(RUOK)

set(RUOK_MAJOR 0)
set(RUOK_MINOR 3)
set(RUOK_VERSION ${RUOK_MAJOR}.${RUOK_MINOR})

FIND_PACKAGE(CURL REQUIRED)
IF(CURL_FOUND)
	SET(RUOK_CURL_INCLUDES ${CURL_INCLUDE_DIRS})
	SET(RUOK_CURL_LIBRARIES ${CURL_LIBRARIES})
ENDIF(CURL_FOUND)
FIND_PACKAGE(LibXml2 REQUIRED)
IF(LIBXML2_FOUND)
	SET(RUOK_LIBXML2_INCLUDES ${LIBXML2_INCLUDE_DIR})
	SET(RUOK_LIBXML2_LIBRARIES ${LIBXML2_LIBRARIES})
ENDIF(LIBXML2_FOUND)
FIND_PACKAGE(BISON REQUIRED)
FIND_PACKAGE(FLEX REQUIRED)
#find_library(CURL_LIBRARY NAMES curl libcurl)
#find_library(LIBXML2_LIBRARY NAMES libxml2)

# set(CMAKE_CXX_FLAGS "-Wall")

add_subdirectory(libs)
add_subdirectory(src)
