cmake_minimum_required(VERSION 2.6)
project(RUOK)

set(RUOK_MAJOR 0)
set(RUOK_MINOR 3)
set(RUOK_VERSION ${RUOK_MAJOR}.${RUOK_MINOR})

#FIND_PACKAGE(CURL REQUIRED)
FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(PC_CURL REQUIRED libcurl)
SET(CURL_DEFINITIONS ${PC_CURL_CFLAGS_OTHER})

FIND_PATH(CURL_INCLUDE_DIR NAMES curl/curl.h
   HINTS
   ${PC_CURL_INCLUDEDIR}
   ${PC_CURL_INCLUDE_DIRS}
   PATH_SUFFIXES curl
   )

FIND_LIBRARY(CURL_LIBRARIES NAMES curl libcurl
   HINTS
   ${PC_CURL_LIBDIR}
   ${PC_CURLL_LIBRARY_DIRS}
   )

# handle the QUIETLY and REQUIRED arguments and set LIBXML2_FOUND to TRUE if 
# all listed variables are TRUE
#INCLUDE(FindPackageHandleStandardArgs.cmake)
#FIND_PACKAGE_HANDLE_STANDARD_ARGS(CURL DEFAULT_MSG CURL_LIBRARIES CURL_INCLUDE_DIR)
#MARK_AS_ADVANCED(CURL_INCLUDE_DIR CURL_LIBRARIES)

SET(RUOK_CURL_INCLUDES ${CURL_INCLUDE_DIR})
SET(RUOK_CURL_LIBRARIES ${CURL_LIBRARIES})

FIND_PACKAGE(LibXml2 REQUIRED)
IF(LIBXML2_FOUND)
	SET(RUOK_LIBXML2_INCLUDES ${LIBXML2_INCLUDE_DIR})
	SET(RUOK_LIBXML2_LIBRARIES ${LIBXML2_LIBRARIES})
ENDIF(LIBXML2_FOUND)
FIND_PACKAGE(BISON REQUIRED)
FIND_PACKAGE(FLEX REQUIRED)
#find_library(CURL_LIBRARY NAMES curl libcurl)
#find_library(LIBXML2_LIBRARY NAMES libxml2)

set(CMAKE_CXX_FLAGS "-Wall")

add_subdirectory(libs)
add_subdirectory(src)
